# pdfs4

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: pdfs.yml
lib/cpp-httplib/: httplib.h  readme.md
lib/sha1/: sha1.h
lib/simple-http/: polinhttp.h
lib/stream/: InputStream.h  StringInputStream.h
lib/tinyhttp/: tinyhttp.h
lib/webdav/: ESPWebDAV.cpp  ESPWebDAV.h
src/: errors.h  pdfs.h  server.h
src/block/: FileBasedFs.h  SuperBlockFs.h  SuperMenuDataBlock.h  SuperMenuDataFs.h
src/fe/app/: App.js
src/storage/: FileSystemStorage.h  GithubHttpStorage.h  MemoryStorage.h  storage.h
src/utils/: StringUtils.h  base64.h  hex.h  http.h  https.h  json.h  serialization.h  sha.h
webstatic/: index.html  package.json
webstatic/src/: index.js
